# delivery-app-abidjan

./: .env.example  .gitignore  .replit  ACTION_CHECKLIST.md  ALERT_INTEGRATION_GUIDE.md  ALERT_LOADER_SUMMARY.md  API_INTEGRATION_GUIDE.md  API_INTEGRATION_REPORT.md  CORRECTIONS_APPLIQUEES.md  DEPLOYMENT_GUIDE.md  DOCKER_GUIDE.md  EMAIL_API_GUIDE.md  ENVIRONMENT_VARIABLES.md  ERREUR_422_RESOLUTION.md  GPS_INTEGRATION_GUIDE.md  LICENSE  MIGRATION_GUIDE.md  MIGRATION_GUIDE_FINAL.md  Makefile  README.md  README_ALERTES.md  REFACTORING_AUTOCOMPLETE.md  UNIQUENESS_VALIDATION_SUMMARY.md  docker-compose.dev.yml  docker-compose.yml  openapi.json  package-lock.json  package.json  replit_config.py  start-local.sh  test_auth_routes.ps1  test_auth_simple.ps1  test_corrections.py  test_otp_error.py  test_routes_complete.ps1  test_simple.py
backend/: .dockerignore  .env.dev  .env.example  .env.prod  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.websocket  Dockerfile.worker  README.md  auth.py  celeryconfig.py  check_dependencies.py  check_user_exists.py  config.py  config_google_places.py  crud.py  database.py  debug_token.py  docker-compose.old.txt  docker-compose.override.yml  docker-compose.yml  main.py  models.py  pyproject.toml  requirements-dev.txt  requirements.txt  restart_server.bat  run-dev.ps1  run.py  run_server.py  schemas.py  settings.py  start_replit.py  start_server.py  structure.txt  test_atomic_validation.py  test_auth_websocket.py  test_autocomplete_final.py  test_autocomplete_fix.py  (+25 more)
backend/alembic/: env.py
backend/app/: main.py  main_corrupted.py
(+798 files in other folders)
