
[tool.poetry]
name = "livraison-abidjan-backend"
version = "1.0.0"
description = "Backend API pour l'application Livraison Abidjan"
authors = ["Team Livraison Abidjan <tech@livraison-abidjan.com>"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.103.1"
uvicorn = "0.23.2"
pydantic = "2.3.0"
pydantic-settings = "2.0.3"
email-validator = "2.0.0.post2"
python-multipart = "0.0.6"
python-jose = {extras = ["cryptography"], version = "3.3.0"}
passlib = {extras = ["bcrypt"], version = "1.7.4"}
sqlalchemy = "2.0.20"
alembic = "1.12.0"
psycopg2-binary = "2.9.7"
redis = "4.6.0"
aiofiles = "23.2.1"
boto3 = "1.28.40"
httpx = "0.24.1"
websockets = "11.0.3"
celery = "5.3.1"
python-keycloak = "3.7.0"
googlemaps = "4.10.0"
twilio = "8.8.0"
stripe = "6.5.0"
sentry-sdk = "1.32.0"
python-dotenv = "1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.0"
pytest-asyncio = "0.21.1"
httpx = "0.24.1"
black = "23.7.0"
isort = "5.12.0"
flake8 = "6.0.0"
